--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-    font-family: font-family: 'Baloo Bhai 2', cursive;;
+    font-family:  'Baloo Bhai 2', cursive;;
     padding: 20px;
     background-color: #EFC7C2;
   }
